@@ -108,6 +108,7 @@ typedef struct lang_output_statement_struct
 enum section_type
 {
   normal_section,
+  overlay_section,
   noload_section,
   noalloc_section
 };
