@@ -1,3 +1,7 @@
+2007-04-18  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-spu/ovl.lnk: Use OVERLAY keyword.
+
 2007-04-17  Paul Brook  <paul@codesourcery.com>
 
 	* ld-arm/preempt-app.s: New test.
